# atqan-wathq-services

./: .gitignore  DEPLOYMENT.md  DNS_SETUP.md  FIXES_APPLIED.md  FIX_APPLIED.md  GRAPES_EDITOR_MODERNIZATION.md  INSTALL_PDF_DEPENDENCIES.md  NGINX_SETUP.md  PORT_CONFIG.md  QUICK_START_PDF_TEMPLATES.md  nginx-http-only.conf  nginx.conf  test_integration.md
api/: .env.example  .gitignore  .pre-commit-config.yaml  FINAL_header_layout.html  MIGRATIONS.md  MIGRATION_QUICKSTART.md  README.md  README_PDF_GENERATION.md  alembic.ini  celery_worker.py  debug_pdf.py  final_header_layout.html  fixed_header_test.html  gunicorn.conf.py  header_test.html  main.py  migrate.sh  pyproject.toml  template_test.html  test_render.html  test_wathq_template.py  zindex_fix_test.html
api/alembic/: env.py
api/app/: main.py
api/examples/: pdf_generation_examples.py
api/requirements/: requirements-dev.txt
api/scripts/: MIGRATION_SUMMARY.md  README_MIGRATIONS.md  apply_wathq_migration.py  complete_migrations.py  fix_cr_requests_migration.py  fix_migration_state.py  fresh_migration.py  migrate_to_single_schema.py  migration_helpers.py  refresh_db.sh  run_migrations.py  seed_all_data.py  seed_wathq_services.py  setup_management_users.py  stamp_and_migrate.py  test_backend.py  test_enhanced_auth.py  test_login.py  test_management_system.py  test_password_reset.py  test_single_schema.py  test_websocket.py  validate_migrations.py  verify_fresh_migration.py
api/templates/: commercial_registration_pdf.html  corporate_contracts_database_template.html  cr_database_template.html  fullinfo.html  (+14 more)
(+410 files in other folders)
